--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "dependencies": {
     "coffee-script": "~1.9.0",
-    "log": "1.4.0",
-    "ws": "0.4.31"
+    "log": "^1.4.0",
+    "ws": "^1.1.1"
   },
   "main": "./index"
 }
